[gd_scene load_steps=5 format=3 uid="uid://cke7nqcdrpxnh"]

[ext_resource type="Script" uid="uid://d2marb2uuiyyf" path="res://Scripts/scrambled_8.gd" id="1_s4h3f"]
[ext_resource type="Texture2D" uid="uid://dg8et5c0cxylc" path="res://MiniGameAssets/scrambled.webp" id="2_vo6xq"]
[ext_resource type="AudioStream" uid="uid://cot11mwo1k4ib" path="res://sounds/boss.mp3" id="3_oedq2"]
[ext_resource type="Texture2D" uid="uid://cvr5onr70hr2y" path="res://MiniGameAssets/Hint.png" id="4_conhy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4h3f")

[node name="OutputLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -95.0
offset_right = 255.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 37.0
offset_right = 1180.0
offset_bottom = 184.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 34
text = "Itâ€™s a careful process to handle updates and changes safely."

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 524.0
offset_right = 651.0
offset_bottom = 591.0
text = "Submit"

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = -334.0
offset_top = -181.0
offset_right = 1510.0
offset_bottom = 933.0
mouse_filter = 2
texture = ExtResource("2_vo6xq")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_oedq2")
volume_db = -2.15

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -3
layout_mode = 0
offset_left = 384.0
offset_top = 190.0
offset_right = 740.0
offset_bottom = 313.0
mouse_filter = 2
texture = ExtResource("4_conhy")
expand_mode = 1

[node name="ExitConfirmDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 444.0
offset_right = 485.0
offset_bottom = 484.0

[node name="Button1" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button6" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 544.0
offset_top = 444.0
offset_right = 1081.0
offset_bottom = 484.0

[node name="Button7" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button8" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button9" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button10" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button11" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button12" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button13" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button14" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button15" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button16" type="Button" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
